# OnyxXML

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: OnyxXMLConfig.cmake  use_tags_file.cmake
cmake/functions/: use_tags_file.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/: node.h
include/compile/: compile_text.h
include/indices/: tag_name_index.h
include/nodes/: _dangerous_raw_text_node.h  comment_node.h  doctype_node.h  foreach_node.h
include/onyxxml/: arena.h  attribute.h  document.h  index.h  node.h  node_handle.h  onyx.h  paged_arena.h  text.h  void_node.h
include/onyxxml/compile/: compile_attribute.h  compile_cdata.h  compile_comment.h  compile_doctype.h  compile_generic_node.h  compile_placeholder.h  compile_processing_instruction.h  compile_string.h  compile_string_utils.h  compile_text.h  compile_xml_declaration.h  document_utils.h  placeholder_document.h
include/onyxxml/indices/: attribute_name_index.h  cache_index.h  tag_index.h  tag_name_index.h
include/onyxxml/nodes/: _dangerous_raw_text_node.h  attribute_view_node.h  cdata_node.h  comment_node.h  doctype_node.h  empty_node.h  foreach_node.h  generic_node.h  if_node.h  processing_instruction_node.h  root_view_node.h  text_node.h  xml_declaration_node.h
include/onyxxml/parse/: _parse_macro.h  dom_parser.h  helpers.h  is_cursor.h  sax_parser.h  stream_cursor.h  string_cursor.h
include/onyxxml/xpath/: axis.h  calculate_mode.h  compare_mode.h  compiler.h  function_code.h  functions.h  instruction.h  lexer.h  opcode.h  parser.h  program.h  virtual_machine.h  xpath_object.h  xpath_query.h
src/: CMakeLists.txt  _dangerous_raw_text_node.cpp  _dangerous_raw_text_node.h  arena.cpp  arena.h  attribute.cpp  attribute.h  attribute_name_index.cpp  attribute_name_index.h  cache_index.h  compile_html.cmake  document.cpp  document.h  empty_node.h  generate_tags_classes.cpp  generate_tags_classes.py  html_object.cpp  html_object.h  index.cpp  index.h  main.cpp  node.cpp  node.h  node_handle.cpp  node_handle.h  object.cpp  object.h  paged_arena.cpp  tag_index.h  tag_name_index.h  tags.txt  templater.cpp  templater.h  text.cpp  text.h  text_node.cpp  text_node.h  use_tags_file.cmake  void_node.cpp  void_node.h
src/compile/: compile_attribute.h  compile_comment.h  compile_placeholder.h  compile_string.h  compile_string_utils.h  compile_text.h  document_utils.h  document_with_bindings.h  dynamic_binding.h  placeholder_document.h  tags.h
src/dynamic/: tags.cpp  tags.h
src/indices/: attribute_name_index.cpp  attribute_name_index.h  cache_index.cpp  cache_index.h  tag_index.cpp  tag_index.h  tag_name_index.cpp  tag_name_index.h
src/nodes/: _dangerous_raw_text_node.cpp  _dangerous_raw_text_node.h  attribute_view_node.cpp  cdata_node.cpp  cdata_node.h  comment_node.cpp  comment_node.h  doctype_node.cpp  doctype_node.h  empty_node.cpp  empty_node.h  foreach_node.cpp  foreach_node.h  generic_node.cpp  generic_node.h  if_node.cpp  if_node.h  processing_instruction_node.cpp  processing_instruction_node.h  root_view_node.cpp  text_node.cpp  text_node.h  xml_declaration_node.cpp  xml_declaration_node.h
src/parse/: dom_parser.cpp  dom_parser.h  helpers.cpp  sax_parser.cpp  stream_cursor.cpp  string_cursor.cpp
src/xpath/: compiler.cpp  functions.cpp  instruction.cpp  lexer.cpp  parser.cpp  program.cpp  virtual_machine.cpp  virtual_machine_functions.cpp  vm_tree_operations.cpp  xpath_object.cpp  xpath_query.cpp
test/: CMakeLists.txt  attribute_tests.cpp  index_tests.cpp  node_tests.cpp  parser_tests.cpp  test-library.cpp  text_tests.cpp  xpath_tests.cpp
